--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: todoapp-secret
 type: Opaque
 data:
-  DB_PASSWORD: IruoVict21  # base64 for 'user_password'
+  DB_PASSWORD: SXJ1b1ZpY3QyMQ==  # base64 for 'user_password'
