--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -1,33 +1,33 @@
-name: Deploy Dockerhub
+name: Java CI with Maven
 
 on:
   push:
     branches:
       - main
 
-
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Set up JDK 17
+      - name: Set up Java 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
           distribution: 'temurin'
-          cache: maven
+          java-version: '17'
 
-      - name: Restore Maven Package
-        uses: actions/cache@v3
+      - name: Cache Maven dependencies
+        uses: actions/cache@v2
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('/*.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
+
+      - name: Build with Maven
+        run: mvn clean install
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -36,8 +36,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t vi108/cloudproject-app:latest .
+        run: docker build -t vi108/todoapp:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push vi108/cloudproject-app:latest
-
+        run: docker push vi108/todoapp:latest
