--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -1,33 +1,33 @@
-name: Java CI with Maven
+name: Deploy Dockerhub
 
 on:
   push:
     branches:
       - main
 
+
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-      - name: Cache Maven dependencies
-        uses: actions/cache@v2
+      - name: Restore Maven Package
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('/*.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-
-      - name: Build with Maven
-        run: mvn clean install
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -36,7 +36,8 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t vi108/todoapp:latest .
+        run: docker build -t vi108/cloudproject-app:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push vi108/todoapp:latest
+        run: docker push vi108/cloudproject-app:latest
+
