--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: todoapp-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: todoapp
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 8017
       targetPort: 8017
+      nodePort: 30080
