--- a/alert.rules.yml
+++ b/alert.rules.yml
@@ -3,7 +3,7 @@ groups:
     rules:
       # Alert when the application instance is down
       - alert: InstanceDown
-        expr: up{job="my_app"} == 0
+        expr: up{job="todoapp"} == 0
         for: 1m
         labels:
           severity: critical
