--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: todoapp
-          image: vi108/todoapp:latest
+          image: vi108/todoapp:new
           ports:
             - containerPort: 8017
           envFrom:
