--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.config.import=secrets.properties
 
+management.server.base-path=/actuator
+management.endpoints.web.exposure.include=*
+management.prometheus.metrics.export.enabled=true
+management.server.port=8017
+management.endpoints.web.path-mapping.prometheus=metrics
+
 
