--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3.4'
 services:
+
+  terraform-runner:
+    image: hashicorp/terraform:1.8.0
+    volumes:
+      - ./terraform:/workspace
+    working_dir: /workspace
+    entrypoint: [ "sh" ]
+    tty: true
+    stdin_open: true
+    networks:
+      - app-network
+
+
+
   localstack:
     image: localstack/localstack
     container_name: localstack
@@ -42,7 +56,7 @@ services:
     networks:
        - app-network
     ports:
-        - "8017:8017"
+        - "8018:8017"
     deploy:
         replicas: 1
         restart_policy:
