--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Configure kubeconfig
         run: |
+              mkdir -p $HOME/.kube
               echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
 
       - name: Apply Kubernetes manifests
