--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -53,5 +53,6 @@ jobs:
 
       - name: Apply Kubernetes manifests
         run: |
+              ls -l ./k8s/manifests
               kubectl apply -f ./k8s/manifests/
 
