--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -51,8 +51,11 @@ jobs:
               mkdir -p $HOME/.kube
               echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
 
+      - name: List manifests directory
+        run: ls -l ./k8s/manifests
+
+
       - name: Apply Kubernetes manifests
         run: |
-              ls -l ./k8s/manifests
-              kubectl apply -f ./k8s/manifests/
+            kubectl apply -f ./k8s/manifests/
 
