--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -56,6 +56,6 @@ jobs:
 
 
       - name: Apply Kubernetes manifests
-        run: |
-            kubectl apply -f ./k8s/manifests/
+        run: kubectl apply -f ./k8s/
+
 
