--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -53,7 +53,7 @@ jobs:
 
 
       - name: Apply Kubernetes manifests
-        run: minikube kubectl apply -f ./k8s/
+        run: minikube kubectl --apply -f ./k8s/
 
 
 
