--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -36,10 +36,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t vi108/cloudproject-app:latest .
+        run: docker build -t vi108/todoapp:new .
 
       - name: Push Docker image to Docker Hub
-        run: docker push vi108/cloudproject-app:latest
+        run: docker push vi108/todoapp:new
 
 
 
