--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=Todo-App
 spring.datasource.url=jdbc:postgresql://localhost:5432/TodoApp
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.config.import=secrets.properties
+spring.datasource.hikari.connection-timeout=30000
+
 
 management.server.base-path=/actuator
 management.endpoints.web.exposure.include=*
