--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.config.import=secrets.properties
 spring.datasource.hikari.connection-timeout=30000
+server.address=0.0.0.0
 
 
 management.server.base-path=/actuator
