--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -8,6 +8,8 @@ services:
     POSTGRES_DB: TodoApp
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: IruoVict21
+    POSTGRES_HOST_AUTH_METHOD: trust
+
    ports:
     - "5432:5432"
    volumes:
