--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.4'
 services:
 
-  terraform-runner:
-    image: hashicorp/terraform:1.8.0
-    volumes:
-      - ./terraform:/workspace
-    working_dir: /workspace
-    entrypoint: [ "sh" ]
-    tty: true
-    stdin_open: true
-    networks:
-      - app-network
+#  terraform-runner:
+#    image: hashicorp/terraform:1.8.0
+#    volumes:
+#      - ./terraform:/workspace
+#    working_dir: /workspace
+#    entrypoint: [ "sh" ]
+#    tty: true
+#    stdin_open: true
+#    networks:
+#      - app-network
 
 
 
@@ -25,14 +25,15 @@ services:
       - app-network
 
   postgres:
-    image: postgres:latest
+    image: postgres:16
     container_name: todo-db
     environment:
       POSTGRES_DB: TodoApp
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: IruoVict21
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - "5431:5432"
+      - "5432:5432"
 #    volumes:
 #      - postgres_data:/var/lib/postgresql/data
     networks:
@@ -47,7 +48,7 @@ services:
     image: vi108/todoapp:latest
     container_name: todo-application
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5431/TodoApp
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/TodoApp
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: IruoVict21
     depends_on:
@@ -67,57 +68,57 @@ services:
         timeout: 10s
         retries: 3
 
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    volumes:
-        - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-    ports:
-      - "9090:9090"
-    networks:
-        - app-network
-#    depends_on:
-#        - alertmanager
-    healthcheck:
-      test: [ "CMD", "wget", "-qO-", "http://localhost:9090/-/healthy" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-#  alertmanager:
-#    image: prom/alertmanager:latest
-#    container_name: alertmanager
+#  prometheus:
+#    image: prom/prometheus:latest
+#    container_name: prometheus
 #    volumes:
-#        - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+#        - ./prometheus.yml:/etc/prometheus/prometheus.yml
 #    command:
-#        - "--config.file=/etc/alertmanager/alertmanager.yml"
+#      - "--config.file=/etc/prometheus/prometheus.yml"
 #    ports:
-#        - "9093:9093"
+#      - "9090:9090"
 #    networks:
 #        - app-network
+##    depends_on:
+##        - alertmanager
 #    healthcheck:
-#        test: [ "CMD", "wget", "-qO-", "http://localhost:9093/-/healthy" ]
+#      test: [ "CMD", "wget", "-qO-", "http://localhost:9090/-/healthy" ]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#
+##  alertmanager:
+##    image: prom/alertmanager:latest
+##    container_name: alertmanager
+##    volumes:
+##        - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+##    command:
+##        - "--config.file=/etc/alertmanager/alertmanager.yml"
+##    ports:
+##        - "9093:9093"
+##    networks:
+##        - app-network
+##    healthcheck:
+##        test: [ "CMD", "wget", "-qO-", "http://localhost:9093/-/healthy" ]
+##        interval: 30s
+##        timeout: 10s
+##        retries: 3
+#
+#
+#  grafana:
+#      image: grafana/grafana:latest
+#      container_name: grafana
+#      ports:
+#        - "3000:3000"
+#      networks:
+#        - app-network
+#      depends_on:
+#        - prometheus
+#      healthcheck:
+#        test: [ "CMD", "curl", "-f", "http://localhost:3000/api/health" ]
 #        interval: 30s
 #        timeout: 10s
 #        retries: 3
-
-
-  grafana:
-      image: grafana/grafana:latest
-      container_name: grafana
-      ports:
-        - "3000:3000"
-      networks:
-        - app-network
-      depends_on:
-        - prometheus
-      healthcheck:
-        test: [ "CMD", "curl", "-f", "http://localhost:3000/api/health" ]
-        interval: 30s
-        timeout: 10s
-        retries: 3
 
 networks:
     app-network:
