--- a/prometheus.yml
+++ b/prometheus.yml
@@ -17,4 +17,16 @@ scrape_configs:
   - job_name: "todoapp"
     metrics_path: '/actuator/metrics'
     static_configs:
-      - targets: ["172.16.1.44:8017"]
+      - targets: ["localhost:8017"]
+
+
+  - job_name: 'kube-state-metrics'
+    kubernetes_sd_configs:
+      - role: endpoints
+        namespaces:
+          names:
+            - kube-system
+    relabel_configs:
+      - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
+        action: keep
+        regex: kube-state-metrics;http-metrics
