--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 /mvnw text eol=lf
 *.cmd text eol=crlf
 Terraform/.terraform/providers/**/* filter=lfs diff=lfs merge=lfs -text
+minikube-linux-amd64 filter=lfs diff=lfs merge=lfs -text
